--- a/css/styles.css
+++ b/css/styles.css
@@ -398,3 +398,38 @@ h3.inputLogin{
 #filtros .btn-light{
   background-color: rgba(197, 169, 169, 0.205);
 }
+
+#infoProd{
+  padding: 10px;
+  margin-top: 100px;
+  width: 80%;
+  border-radius: 20px;
+  height: auto;
+  background-color: rgba(239, 232, 232, 0.515);
+}
+
+#nameCat{
+  margin-bottom: 30px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+#nameProd{
+  
+  font-size: 40px;
+}
+
+#allImages>*,#allImages img{
+  padding: 1px !important;
+  width: 100px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+#allImages img:hover{
+  transform: scale(1.3);
+}
+
+#imagenPrincipal{
+  max-width: 100%;
+}
