--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,8 @@ h3.inputLogin{
 }
 
 #infoProd{
+  font-family: 'Josefin Sans',sans-serif!important;
+  font-weight: 300;
   padding: 10px;
   margin-top: 100px;
   width: 80%;
@@ -442,9 +444,21 @@ h3.inputLogin{
   max-width: 100%;
 }
 
-#comentarios h3{
+#comentarios{
+  background-color: rgba(255, 255, 255, 0.489);
+  border-radius: 20px;
+  width: 90%;
+  padding: 15px;
+  box-shadow: 0px -1px 23px 0px rgba(117,104,104,0.49);
+  -webkit-box-shadow: 0px -1px 23px 0px rgba(117,104,104,0.49);
+  -moz-box-shadow: 0px -1px 23px 0px rgba(117,104,104,0.49);
+}
+
+#comentTitle{
   text-align: center;
   margin-bottom: 10px;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
 #comentarios hr{
