--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,8 @@ a.custom-card:hover {
   height: 
   50px !important;
 }
-a.nav-link { transition: all 0.5s;}
+a.nav-link,div.card { transition: all 0.5s;}
+
 
 a.nav-link:hover, div.card:hover{
   transform: scale(1.1);
@@ -466,7 +467,7 @@ h3.inputLogin{
   -moz-box-shadow: 0px -1px 23px 0px rgba(117,104,104,0.49);
 }
 
-#comentTitle{
+.subtitleInfoProducts{
   text-align: center;
   margin-bottom: 10px;
   text-transform: uppercase;
@@ -525,3 +526,21 @@ h3.inputLogin{
   display: flex;
 }
 
+#relatedProducts{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+#relatedProducts > *{
+  width: 15rem;
+}
+
+#relatedProducts  .card-body{
+  padding:2px;
+}
+
+#relatedProducts .card-title{
+  text-align: center;
+  text-transform: uppercase;
+}
