--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,7 @@
-.jumbotron,
 .card-body,
 .container,
 .site-header {
   font-family: 'Raleway', serif !important;
-}
-
-.jumbotron .display-4 {
-  font-weight: bold;
 }
 
 nav a {
@@ -28,43 +23,8 @@ nav a {
   }
 }
 
-.jumbotron {
-  height: 50vh;
-  padding: 5em inherit;
-  margin-bottom: 0;
-  background-color: #53C0FB;
-  background: url('../img/cover_back.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  color: black;
-  font-weight: bold;
-}
-
-@media (min-width: 768px) {
-  .jumbotron {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-}
-
-.jumbotron p:last-child {
-  margin-bottom: 0;
-}
-
-.jumbotron-heading {
-  font-weight: 300;
-}
-
-.jumbotron .container {
-  max-width: 40rem;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 10px;
-  text-shadow: 1px 1px 2px grey;
-}
-
-.jumbotron .lead {
-  font-size: 38px;
+.jrow{
+  height: 100%;
 }
 
 footer {
@@ -260,8 +220,21 @@ a.nav-link:hover, div.card:hover{
   max-width: max-content;
 }
 
-#botonLogin:hover{
-  background-color: rgba(255, 255, 255, 0.249);
+#botonLogin:hover, #modalCancel:hover{
+  background-color: rgba(125, 116, 116, 0.249);
+  color: black;
+}
+
+.modal-content {
+  border-radius: 5%;
+  height: 600px;
+}
+
+#modalCancel{
+  border:none;
+  border-radius: 30px; 
+  background-color: rgba(0, 0, 0, 0.455);
+  margin-top: 40px;
 }
 
 .nav-item > a{
@@ -283,28 +256,26 @@ a.nav-link:hover, div.card:hover{
   padding-right: 5px;
 }
 
-.jumbotron{
-  max-width: 100%;
-}
 
 /*LOGIN*/
 h3.inputLogin{
   text-align: center;
   margin-bottom: 1rem;
   text-transform: uppercase;
+  font-size: 100%;
+  margin: 0px auto;
 }
 
 .inputLogin{
   display: block;
   margin: 5px auto;
-  min-width: 200px;
-  max-width: 300px;
+  width: 70%;
 }
 
 #logoLogin{
   display: block;
   margin: 0px auto;
-  height: 150px;
+  height: 100%;
   width: auto;
 }
 
@@ -416,7 +387,6 @@ h3.inputLogin{
   font-family: 'Josefin Sans',sans-serif!important;
   font-weight: 300;
   padding: 10px;
-  margin-top: 100px;
   width: 80%;
   border-radius: 20px;
   height: auto;
@@ -425,8 +395,9 @@ h3.inputLogin{
 
 #nameCat{
   margin-bottom: 30px;
-  font-weight: 600;
   text-transform: uppercase;
+  width: 100%;
+  font-size: 10vw;
 }
 
 #infoAbtProd{
@@ -442,11 +413,12 @@ h3.inputLogin{
   font-size: 40px;
 }
 
+
 #allImages>*,#allImages img{
   padding: 1px !important;
-  width: 100px;
+  width: 80px;
   margin: 0 auto;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
 #allImages img:hover{
@@ -544,3 +516,4 @@ h3.inputLogin{
   text-align: center;
   text-transform: uppercase;
 }
+
