--- a/css/styles.css
+++ b/css/styles.css
@@ -396,8 +396,7 @@ h3.inputLogin{
 #nameCat{
   margin-bottom: 30px;
   text-transform: uppercase;
-  width: 100%;
-  font-size: 10vw;
+  font-size: 400%;
 }
 
 #infoAbtProd{
@@ -506,7 +505,8 @@ h3.inputLogin{
 }
 
 #relatedProducts > *{
-  width: 15rem;
+  width: 40%;
+  margin-bottom: 5px;
 }
 
 #relatedProducts  .card-body{
