--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: AntipastoRegular;
+  src: url('../webfonts/Antipasto-Pro-Regular-trial.ttf');
+}
+@font-face {
+  font-family: AntipastoLight;
+  src: url('../webfonts/Antipasto-Pro-ExtraLight-trial.ttf');
+}
+@font-face {
+  font-family: AntipastoBold;
+  src: url('../webfonts/Antipasto-Pro-ExtraBold-trial.ttf');
+}
+
 .card-body,
 .container,
 .site-header {
@@ -322,6 +335,14 @@ h3.inputLogin{
   margin-bottom: 50px;
 }
 
+body{
+  background-color: #bcb9b948;
+}
+
+#productos{
+  background-color: white;
+}
+
 #productos .row img:hover{
   transform: scale(1.1);
 }
@@ -336,19 +357,13 @@ h3.inputLogin{
   margin: 0px auto;
   margin-left: 40px;
   margin-top: 5%;
-  border: 1px solid ;
-  border-radius: 15px;
-  border-color: rgba(0, 0, 0, 0.205);
-  background-color: rgba(19, 118, 118, 0.027);
   padding: 10px;
-  box-shadow: 10px 10px 5px 0px rgba(222,199,199,0.75);
--webkit-box-shadow: 10px 10px 5px 0px rgba(222,199,199,0.75);
--moz-box-shadow: 10px 10px 5px 0px rgba(222,199,199,0.75);
 }
 
 #container-productos{
   text-align: center;
 }
+
 
 #filtros>h3{
   text-transform: uppercase;
@@ -394,21 +409,25 @@ h3.inputLogin{
 }
 
 #nameCat{
+  font-family: AntipastoBold;
   margin-bottom: 30px;
   text-transform: uppercase;
   font-size: 400%;
 }
+
 
 #infoAbtProd{
   display: flex;
   justify-content: space-between;
 }
 
+
 #infoAbtProd > *{
   margin-right: 20px!important;
 }
 
 #nameProd{
+  font-family: AntipastoRegular;
   font-size: 40px;
 }
 
