--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ a.custom-card:hover {
 .navbar > * >*{
   display: flex;
   padding: 10px;
+  padding-top: 15px;
 }
 
 .dropdown{
@@ -215,9 +216,9 @@ a.custom-card:hover {
 
 .navbar img{
   width: 50px;
-  height: 
-  50px !important;
+  height: 50px !important;
 }
+
 a.nav-link,div.card { transition: all 0.5s;}
 
 
@@ -585,4 +586,8 @@ body{
   border: 1px solid rgba(0, 0, 0, 0.228);
   width: 150px;
   height: 150px;
+}
+
+.imgComment{
+  border-radius: 50%;
 }
